==> 3419362086/2026DianSai/User/Module/BNO08x/bno08x_hal.c <==
#include "bno08x_hal.h"

char readFRSdata(unsigned int recordID, unsigned char startLocation, unsigned char wordsToRead)
{
    unsigned char spot = 0;
    unsigned char dataLength = 0;
    unsigned char frsStatus = 0;
    unsigned long data0 = 0;
    unsigned long data1 = 0;
    // First we send a Flash Record System (FRS) request
    frsReadRequest(recordID, startLocation, wordsToRead); // From startLocation of record, read a # of words
 
    // Read bytes until FRS reports that the read is complete
    while (1)
    {
        // Now we wait for response
        while (1)
        {
            unsigned char counter = 0;
            while (receivePacket() == 0)
            {
                if (counter++ > 100)
                    return (0); // Give up
                HAL_Delay(1);
            }
 
            // We have the packet, inspect it for the right contents
            // See page 40. Report ID should be 0xF3 and the FRS types should match the thing we requested
            if (shtpData[0] == SHTP_REPORT_FRS_READ_RESPONSE)
                if (((unsigned int)shtpData[13] << 8 | shtpData[12]) == recordID)
                    break; // This packet is one we are looking for
        }
 
        dataLength = shtpData[1] >> 4;
        frsStatus = shtpData[1] & 0x0F;
 
        data0 = (unsigned long)shtpData[7] << 24 | (unsigned long)shtpData[6] << 16 | (unsigned long)shtpData[5] << 8 | (unsigned long)shtpData[4];
        data1 = (unsigned long)shtpData[11] << 24 | (unsigned long)shtpData[10] << 16 | (unsigned long)shtpData[9] << 8 | (unsigned long)shtpData[8];
 
        // Record these words to the metaData array
        if (dataLength > 0)
        {
            metaData[spot++] = data0;
        }
        if (dataLength > 1)
        {
            metaData[spot++] = data1;
        }
 
        if (frsStatus == 3 || frsStatus == 6 || frsStatus == 7)
        {
            return (1); // FRS status is read completed! We're done!
        }
    }
}

void softReset(void)
{
    shtpData[0] = 1; // Reset
 
    // Attempt to start communication with sensor
    sendPacket(CHANNEL_EXECUTABLE, 1); // Transmit packet on channel 1, 1 byte
 
    // Read all incoming data and flush it
    HAL_Delay(50);
    while (receivePacket() == 1)
        ;
    HAL_Delay(50);
    while (receivePacket() == 1)
        ;
}

char receivePacket(void)
{
    int dataLength = 0;
    unsigned char packetLSB = 0;
    unsigned char packetMSB = 0;
    unsigned char channelNumber = 0;
    unsigned char sequenceNumber = 0;
    ReadNbyte(i2c_tmp, 4);
 
    // Get the first four bytes, aka the packet header
    packetLSB = i2c_tmp[0];
    packetMSB = i2c_tmp[1];
    channelNumber = i2c_tmp[2];
    sequenceNumber = i2c_tmp[3]; // Not sure if we need to store this or not
 
    // Store the header info.
    shtpHeader[0] = packetLSB;
    shtpHeader[1] = packetMSB;
    shtpHeader[2] = channelNumber;
    shtpHeader[3] = sequenceNumber;
 
    // Calculate the number of data bytes in this packet
    dataLength = ((unsigned int)packetMSB << 8 | packetLSB);
    dataLength &= ~(1 << 15);//清除 MSbit。
//此位指示此包是否是上一个包的延续。暂时忽略它。
//TODO 将此捕获为错误并退出
    if (dataLength == 0)
    {
        // Packet is empty
        return (0); // All done
    }
    dataLength -= 4; // Remove the header bytes from the data count
 
    getData(dataLength);
 
    return (1); // We're done!
}

char getData(unsigned int bytesRemaining)
{
    unsigned int dataSpot = 0; // Start at the beginning of shtpData array
    unsigned char x = 0;
    unsigned char incoming = 0;
    // Setup a series of chunked 32 byte reads
    while (bytesRemaining > 0)
    {
        unsigned int numberOfBytesToRead = bytesRemaining;
        if (numberOfBytesToRead > (I2C_BUFFER_LENGTH - 4))
            numberOfBytesToRead = (I2C_BUFFER_LENGTH - 4);
        ReadNbyte(i2c_tmp, (unsigned char)(numberOfBytesToRead + 4));
 
        // 前四个字节是标头字节，被丢弃
 
        for (x = 0; x < numberOfBytesToRead; x++)
        {
            incoming = i2c_tmp[x + 4];
            if (dataSpot < MAX_PACKET_SIZE)
            {
                shtpData[dataSpot++] = incoming; // Store data into the shtpData array
            }
            else
            {
                // Do nothing with the data
            }
        }
 
        bytesRemaining -= numberOfBytesToRead;
    }
    return (1); // Done!
}

char sendPacket(unsigned char channelNumber, unsigned char dataLength)
{
    unsigned char packetLength = dataLength + 4; // Add four bytes for the header
    // if(packetLength > I2C_BUFFER_LENGTH) return(0); //You are trying to send too much. Break into smaller packets.
    unsigned char i = 0;
    // Send the 4 byte packet header
    i2c_tmp[0] = (packetLength & 0xFF);             // Packet length LSB
    i2c_tmp[1] = (0);                               // Packet length MSB
    i2c_tmp[2] = (channelNumber);                   // Channel number
    i2c_tmp[3] = (sequenceNumber[channelNumber]++); // Send the sequence number, increments with each packet sent, different counter for each channel
 
    // Send the user's data packet
    for (i = 0; i < dataLength; i++)
    {
        i2c_tmp[4 + i] = (shtpData[i]);
    }
    WriteNbyte(i2c_tmp, (u8)(dataLength + 4));
 
    return (1);
}
