==> akionu/kaguya-code/lib/pico-bno08x/src/pico-bno08x.cpp <==
#include "pico-bno08x.h"

bool BNO080::readFRSdata(uint16_t recordID, uint8_t startLocation, uint8_t wordsToRead)
{
	uint8_t spot = 0;

	//First we send a Flash Record System (FRS) request
	frsReadRequest(recordID, startLocation, wordsToRead); //From startLocation of record, read a # of words

	//Read bytes until FRS reports that the read is complete
	while (1)
	{
		//Now we wait for response
		while (1)
		{
			uint8_t counter = 0;
			while (receivePacket() == false)
			{
				if (counter++ > 100)
					return (false); //Give up
				sleep_ms(1);
			}

			//We have the packet, inspect it for the right contents
			//See page 40. Report ID should be 0xF3 and the FRS types should match the thing we requested
			if (shtpData[0] == SHTP_REPORT_FRS_READ_RESPONSE)
				if ((uint16_t)(shtpData[13] << 8 | shtpData[12]) == recordID)
					break; //This packet is one we are looking for
		}

		uint8_t dataLength = shtpData[1] >> 4;
		uint8_t frsStatus = shtpData[1] & 0x0F;

		uint32_t data0 = (uint32_t)shtpData[7] << 24 | (uint32_t)shtpData[6] << 16 | (uint32_t)shtpData[5] << 8 | (uint32_t)shtpData[4];
		uint32_t data1 = (uint32_t)shtpData[11] << 24 | (uint32_t)shtpData[10] << 16 | (uint32_t)shtpData[9] << 8 | (uint32_t)shtpData[8];

		//Record these words to the metaData array
		if (dataLength > 0)
		{
			metaData[spot++] = data0;
		}
		if (dataLength > 1)
		{
			metaData[spot++] = data1;
		}

		if (spot >= MAX_METADATA_SIZE)
		{
			if (_printDebug == true)
				printf("metaData array over run. Returning.\n");
			return (true); //We have run out of space in our array. Bail.
		}

		if (frsStatus == 3 || frsStatus == 6 || frsStatus == 7)
		{
			return (true); //FRS status is read completed! We're done!
		}
	}
}

void BNO080::softReset(void)
{
	shtpData[0] = 1; //Reset

	//Attempt to start communication with sensor
	sendPacket(CHANNEL_EXECUTABLE, 1); //Transmit packet on channel 1, 1 byte

	//Read all incoming data and flush it
	sleep_ms(50);
	while (receivePacket() == true)
		;
	sleep_ms(50);
	while (receivePacket() == true)
		;
}

bool BNO080::receivePacket(void)
{
#if 0
	if (_i2cPort == NULL) //Do SPI
	{
		if (gpio_get(_int) == 1)
			return (false); //Data is not available

		//Old way: if (waitForSPI() == false) return (false); //Something went wrong

		//Get first four bytes to find out how much data we need to read

		_spiPort->beginTransaction(SPISettings(_spiPortSpeed, MSBFIRST, SPI_MODE3);
		gpio_put(_cs, LOW);

		//Get the first four bytes, aka the packet header
		uint8_t packetLSB = _spiPort->transfer(0);
		uint8_t packetMSB = _spiPort->transfer(0);
		uint8_t channelNumber = _spiPort->transfer(0);
		uint8_t sequenceNumber = _spiPort->transfer(0); //Not sure if we need to store this or not

		//Store the header info
		shtpHeader[0] = packetLSB;
		shtpHeader[1] = packetMSB;
		shtpHeader[2] = channelNumber;
		shtpHeader[3] = sequenceNumber;

		//Calculate the number of data bytes in this packet
		uint16_t dataLength = (uint16_t)packetMSB << 8 | packetLSB);
		dataLength &= ~(1 << 15); //Clear the MSbit.
		//This bit indicates if this package is a continuation of the last. Ignore it for now.
		//TODO catch this as an error and exit
		if (dataLength == 0)
		{
			//Packet is empty
			printHeader();
			return (false); //All done
		}
		dataLength -= 4; //Remove the header bytes from the data count

		//Read incoming data into the shtpData array
		for (uint16_t dataSpot = 0; dataSpot < dataLength; dataSpot++)
		{
			uint8_t incoming = _spiPort->transfer(0xFF);
			if (dataSpot < MAX_PACKET_SIZE)	//BNO080 can respond with upto 270 bytes, avoid overflow
				shtpData[dataSpot] = incoming; //Store data into the shtpData array
		}

		gpio_put(_cs, 1); //Release BNO080

		_spiPort->endTransaction();
		printPacket();
	}
	else //Do I2C
#endif
	{
		int16_t ret = i2c_read_blocking(_i2cBus, (uint8_t)_deviceAddress, shtpHeader, 4, false);

		//Get the first four bytes, aka the packet header
		uint8_t packetLSB = shtpHeader[0];
		uint8_t packetMSB = shtpHeader[1];
		uint8_t channelNumber = shtpHeader[2];
		uint8_t sequenceNumber = shtpHeader[3]; //Not sure if we need to store this or not

		//Calculate the number of data bytes in this packet
		int16_t dataLength = ((uint16_t)packetMSB << 8 | packetLSB);
		dataLength &= ~(1 << 15); //Clear the MSbit.
		//This bit indicates if this package is a continuation of the last. Ignore it for now.
		//TODO catch this as an error and exit
		if (dataLength == 0 || ret < 0)
		{
			//Packet is empty
			return (false); //All done
		}

#if 0
		dataLength -= 4; //Remove the header bytes from the data count
		getData(dataLength);
#endif
		
#if 1
		//waitForReadI2C();
		ret = i2c_read_blocking(_i2cBus, (uint8_t)_deviceAddress, shtpBuffer, dataLength, false);
		if (ret < 0) {
			//printf("receivePacket: ret: %d\n", ret);
			return (false);
		}
		if (_printDebug == true)
			printf("receive: ");
		printPacket();

#endif
	}

	return (true); //We're done!
}

bool BNO080::getData(uint16_t bytesRemaining)
{
	uint16_t dataSpot = 0; //Start at the beginning of shtpData array
	static uint8_t buf[I2C_BUFFER_LENGTH];

	//Setup a series of chunked 32 byte reads
	while (bytesRemaining > 0)
	{
		uint16_t numberOfBytesToRead = bytesRemaining;
		if (numberOfBytesToRead > (I2C_BUFFER_LENGTH - 4))
			numberOfBytesToRead = (I2C_BUFFER_LENGTH - 4);

		if (waitForReadI2C() == false) 
			return (false); //Error

		i2c_read_blocking(_i2cBus, _deviceAddress, buf, (uint8_t)(numberOfBytesToRead + 4), false);

		for (uint8_t x = 0; x < numberOfBytesToRead; x++)
		{
			if (dataSpot < MAX_PACKET_SIZE)
			{
				shtpData[dataSpot++] = buf[x+4]; //Store data into the shtpData array
			}
			else
			{
				//Do nothing with the data
			}
		}

		bytesRemaining -= numberOfBytesToRead;
	}
	return (true); //Done!
}

bool BNO080::sendPacket(uint8_t channelNumber, uint8_t dataLength)
{
	uint8_t packetLength = dataLength + 4; //Add four bytes for the header
	//packetLength &= ~(1 << 15);

#if 0
	if (_i2cPort == NULL) //Do SPI
	{
		//Wait for BNO080 to indicate it is available for communication
		if (waitForSPI() == false)
			return (false); //Something went wrong

		//BNO080 has max CLK of 3MHz, MSB first,
		//The BNO080 uses CPOL = 1 and CPHA = 1. This is mode3
		_spiPort->beginTransaction(SPISettings(_spiPortSpeed, MSBFIRST, SPI_MODE3);
		gpio_put(_cs, LOW);

		//Send the 4 byte packet header
		_spiPort->transfer(packetLength & 0xFF);			 //Packet length LSB
		_spiPort->transfer(packetLength >> 8);				 //Packet length MSB
		_spiPort->transfer(channelNumber);					 //Channel number
		_spiPort->transfer(sequenceNumber[channelNumber]++); //Send the sequence number, increments with each packet sent, different counter for each channel

		//Send the user's data packet
		for (uint8_t i = 0; i < dataLength; i++)
		{
			_spiPort->transfer(shtpData[i]);
		}

		gpio_put(_cs, 1);
		_spiPort->endTransaction();
	}
	else //Do I2C
#endif
	{
		//if(packetLength > I2C_BUFFER_LENGTH) return(false); //You are trying to send too much. Break into smaller packets.

		// 4 byte packet header
		shtpHeader[0] = packetLength & 0xFF;			  //Packet length LSB
		shtpHeader[1] = packetLength >> 8;				  //Packet length MSB
		shtpHeader[2] = channelNumber;					  //Channel number
		shtpHeader[3] = sequenceNumber[channelNumber]++; //Send the sequence number, increments with each packet sent, different counter for each channel

		//waitForWriteI2C();
		int16_t ret = i2c_write_nors_blocking(_i2cBus, _deviceAddress, shtpBuffer, packetLength);
		
		if (_printDebug == true)
			printf("send: ");
		printPacket();
		if (ret < 0) 
			return (false);
	}

	return (true);
}
